<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="id.codingsmartschool.app.AboutActivity">

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About \nCoding Smart School \n"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_1"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:layout_below="@id/about"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Visi"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visi"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Misi"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misi"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Strategi"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strategi"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yang dipadukan dengan: \n"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

</LinearLayout>
</ScrollView>
